--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "vercel_app.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/vercel_app.py"
+      "dest": "/api/index.py"
     }
   ],
   "env": {
-    "VERCEL": "1"
+    "VERCEL": "1",
+    "PYTHONUNBUFFERED": "1"
   }
 }
