--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ Pillow==10.0.0
 PyMuPDF==1.22.5
 bcrypt==4.0.1
 psutil==5.9.5
-flask==2.3.3
-uvicorn==0.23.2
+flask==2.0.1
+Werkzeug==2.0.1
+jinja2==3.0.1
+itsdangerous==2.0.1
