--- a/vercel.json
+++ b/vercel.json
@@ -6,15 +6,9 @@
       "use": "@vercel/python"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.py"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/api/index.py" }
   ],
-  "env": {
-    "VERCEL": "1"
-  },
   "headers": [
     {
       "source": "/api/(.*)",
@@ -25,5 +19,8 @@
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
       ]
     }
-  ]
+  ],
+  "env": {
+    "VERCEL": "1"
+  }
 }
